force-app/main/default/objects/VO_Survey__c/VO_Survey__c.object-meta.xml
<CustomObject>
    <label>Voice</label>
    <nameField>
        <displayFormat>Survey-{00000000}</displayFormat>
        <label>Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>