force-app/main/default/objects/VO_Survey__c/fields/Action_delegated_to_CA__c.field-meta.xml
<CustomField>
    <fullName>Action_delegated_to_CA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action Delegated To CA</label>
    <type>Checkbox</type>
</CustomField>