force-app/main/default/objects/VO_Survey__c/fields/AdvisorCSRole__c.field-meta.xml
<CustomField>
    <fullName>AdvisorCSRole__c</fullName>
    <label>Advisor CS Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>