force-app/main/default/objects/VO_Survey__c/fields/AdvisorWWId__c.field-meta.xml
<CustomField>
    <fullName>AdvisorWWId__c</fullName>
    <label>AdvisorWWId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>