force-app/main/default/objects/VO_Survey__c/fields/Answer_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Answer_DateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Default value equal to now. Used to compute the status duration.</description>
    <label>Answer Date (time)</label>
    <type>DateTime</type>
</CustomField>