force-app/main/default/objects/VO_Survey__c/fields/AnswerDate__c.field-meta.xml
<CustomField>
    <fullName>AnswerDate__c</fullName>
    <description>Default value equal to today (old voice)</description>
    <label>Answer Date</label>
    <type>Date</type>
</CustomField>