force-app/main/default/objects/VO_Survey__c/fields/Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_To__c</fullName>
    <label>Assign To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>