force-app/main/default/objects/VO_Survey__c/fields/CAName__c.field-meta.xml
<CustomField>
    <fullName>CAName__c</fullName>
    <description>Denormalized data from Account --&gt; populated with VO_Survey apex class before insert from IDTransaction__c field. Concatenation of all the CA names and ids involved in the related transaction.</description>
    <label>CA Name(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>