force-app/main/default/objects/VO_Survey__c/fields/CAScore__c.field-meta.xml
<CustomField>
    <fullName>CAScore__c</fullName>
    <description>Client Advisor Score</description>
    <label>CA Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>