force-app/main/default/objects/VO_Survey__c/fields/Client_phone__c.field-meta.xml
<CustomField>
    <fullName>Client_phone__c</fullName>
    <formula>IF(NOT(ISBLANK(ClientDreamID__r.PersonMobilePhone)) , ClientDreamID__r.PersonMobilePhone, 
IF(NOT(ISBLANK(ClientDreamID__r.PersonHomePhone)) , ClientDreamID__r.PersonHomePhone, 
IF(NOT(ISBLANK(ClientDreamID__r.Phone)) , ClientDreamID__r.Phone, &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client’s phone</label>
    <type>Text</type>
</CustomField>