force-app/main/default/objects/VO_Survey__c/fields/ClientDreamID__c.field-meta.xml
<CustomField>
    <fullName>ClientDreamID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>populated with VO_Survey apex class before insert from DreamIDText__c field</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Survey</relationshipName>
    <type>Lookup</type>
</CustomField>