force-app/main/default/objects/VO_Survey__c/fields/ClientNameText__c.field-meta.xml
<CustomField>
    <fullName>ClientNameText__c</fullName>
    <description>Denormalized data from Account --&gt; populated with VO_Survey apex class before insert from DreamIDText__c field</description>
    <label>Client Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>