force-app/main/default/objects/VO_Survey__c/fields/ClientSFID__c.field-meta.xml
<CustomField>
    <fullName>ClientSFID__c</fullName>
    <formula>ClientDreamID__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client SFID</label>
    <type>Text</type>
</CustomField>