force-app/main/default/objects/VO_Survey__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <description>Populated with a wf. Used to compute the status duration.</description>
    <label>Close Date (time)</label>
    <type>DateTime</type>
</CustomField>