force-app/main/default/objects/VO_Survey__c/fields/Comment_History__c.field-meta.xml
<CustomField>
    <fullName>Comment_History__c</fullName>
    <label>Comment History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>