force-app/main/default/objects/VO_Survey__c/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <description>Denormalized data from Account --&gt; sent by Clicktools</description>
    <label>Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>