force-app/main/default/objects/VO_Survey__c/fields/DreamID__c.field-meta.xml
<CustomField>
    <fullName>DreamID__c</fullName>
    <formula>ClientDreamID__r.DREAMID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DreamID</label>
    <type>Text</type>
</CustomField>