force-app/main/default/objects/VO_Survey__c/fields/DreamIDText__c.field-meta.xml
<CustomField>
    <fullName>DreamIDText__c</fullName>
    <description>Denormalized data from Account --&gt; sent by Clicktools</description>
    <label>Dream ID Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>