force-app/main/default/objects/VO_Survey__c/fields/Email_date__c.field-meta.xml
<CustomField>
    <fullName>Email_date__c</fullName>
    <label>Email date</label>
    <type>Date</type>
</CustomField>