force-app/main/default/objects/VO_Survey__c/fields/FeedbackID__c.field-meta.xml
<CustomField>
    <fullName>FeedbackID__c</fullName>
    <externalId>true</externalId>
    <label>Feedback ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>