force-app/main/default/objects/VO_Survey__c/fields/Follow_up_by__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_by__c</fullName>
    <description>Populated with a wf with the $user&apos;s firstname and lastname who first update Comment History</description>
    <label>Follow up by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>