force-app/main/default/objects/VO_Survey__c/fields/GlobalScore__c.field-meta.xml
<CustomField>
    <fullName>GlobalScore__c</fullName>
    <label>Global Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>