force-app/main/default/objects/VO_Survey__c/fields/IDTransaction__c.field-meta.xml
<CustomField>
    <fullName>IDTransaction__c</fullName>
    <description>Denormalized data from Purchased Products --&gt; sent by Clicktools</description>
    <label>ID Transaction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>