force-app/main/default/objects/VO_Survey__c/fields/Inbound_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Contact_Date__c</fullName>
    <description>icx csc contact information</description>
    <label>Inbound Contact Date</label>
    <type>Date</type>
</CustomField>