force-app/main/default/objects/VO_Survey__c/fields/InboundContact_Id__c.field-meta.xml
<CustomField>
    <fullName>InboundContact_Id__c</fullName>
    <label>InboundContact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>