force-app/main/default/objects/VO_Survey__c/fields/InitialScoring__c.field-meta.xml
<CustomField>
    <fullName>InitialScoring__c</fullName>
    <label>Initial Scoring</label>
    <length>100</length>
    <type>Text</type>
</CustomField>