force-app/main/default/objects/VO_Survey__c/fields/LastResolutionDate__c.field-meta.xml
<CustomField>
    <fullName>LastResolutionDate__c</fullName>
    <label>Last Resolution Date</label>
    <type>DateTime</type>
</CustomField>