force-app/main/default/objects/VO_Survey__c/fields/MANAGEMENT_ZONE_LEVEL__c.field-meta.xml
<CustomField>
    <fullName>MANAGEMENT_ZONE_LEVEL__c</fullName>
    <description>Denormalized data from Store --&gt; populated with VO_Survey apex class before insert from StoreID__c field</description>
    <label>MANAGEMENT ZONE LEVEL</label>
    <length>20</length>
    <type>Text</type>
</CustomField>