force-app/main/default/objects/VO_Survey__c/fields/MGMT_ZONE_SUB_LEVEL1__c.field-meta.xml
<CustomField>
    <fullName>MGMT_ZONE_SUB_LEVEL1__c</fullName>
    <description>Denormalized data from Store --&gt; populated with VO_Survey apex class before insert from StoreID__c field</description>
    <label>MGMT ZONE SUB LEVEL1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>