force-app/main/default/objects/VO_Survey__c/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <label>Order ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>