force-app/main/default/objects/VO_Survey__c/fields/PromoterNPS__c.field-meta.xml
<CustomField>
    <fullName>PromoterNPS__c</fullName>
    <formula>IF( 
!ISNUMBER(Q03Answer__c), 0, 
IF(ISNUMBER(Q03Answer__c) &amp;&amp; VALUE(Q03Answer__c) &gt; 8, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoter (NPS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>