force-app/main/default/objects/VO_Survey__c/fields/PurchaseProductKey__c.field-meta.xml
<CustomField>
    <fullName>PurchaseProductKey__c</fullName>
    <description>Denormalised composite key --&gt; populated with VO_Survey apex class before insert from ClientDreamID__c, IDTransaction__c and StoreID__c fields</description>
    <label>Purchase Product Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>