force-app/main/default/objects/VO_Survey__c/fields/Q01Answer__c.field-meta.xml
<CustomField>
    <fullName>Q01Answer__c</fullName>
    <label>Q01 Answer</label>
    <type>TextArea</type>
</CustomField>