force-app/main/default/objects/VO_Survey__c/fields/Q01Section__c.field-meta.xml
<CustomField>
    <fullName>Q01Section__c</fullName>
    <label>Q01 Section</label>
    <type>TextArea</type>
</CustomField>