force-app/main/default/objects/VO_Survey__c/fields/Q01Shortname__c.field-meta.xml
<CustomField>
    <fullName>Q01Shortname__c</fullName>
    <label>Q01 Shortname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>