force-app/main/default/objects/VO_Survey__c/fields/Q01Title__c.field-meta.xml
<CustomField>
    <fullName>Q01Title__c</fullName>
    <label>Q01 Title</label>
    <type>TextArea</type>
</CustomField>