force-app/main/default/objects/VO_Survey__c/fields/Q02Answer__c.field-meta.xml
<CustomField>
    <fullName>Q02Answer__c</fullName>
    <description>User to store the satisfaction grade no matters the survey type</description>
    <label>Q02 Answer</label>
    <type>TextArea</type>
</CustomField>