force-app/main/default/objects/VO_Survey__c/fields/Q02Number__c.field-meta.xml
<CustomField>
    <fullName>Q02Number__c</fullName>
    <label>Q02 Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>