force-app/main/default/objects/VO_Survey__c/fields/Q02Section__c.field-meta.xml
<CustomField>
    <fullName>Q02Section__c</fullName>
    <label>Q02 Section</label>
    <type>TextArea</type>
</CustomField>