force-app/main/default/objects/VO_Survey__c/fields/Q02Shortname__c.field-meta.xml
<CustomField>
    <fullName>Q02Shortname__c</fullName>
    <label>Q02 Shortname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>