force-app/main/default/objects/VO_Survey__c/fields/Q02Title__c.field-meta.xml
<CustomField>
    <fullName>Q02Title__c</fullName>
    <label>Q02 Title</label>
    <type>TextArea</type>
</CustomField>