force-app/main/default/objects/VO_Survey__c/fields/Q03Answer__c.field-meta.xml
<CustomField>
    <fullName>Q03Answer__c</fullName>
    <description>User to store the recommendation grade no matters the survey type</description>
    <label>Q03 Answer</label>
    <type>TextArea</type>
</CustomField>