force-app/main/default/objects/VO_Survey__c/fields/Q03Section__c.field-meta.xml
<CustomField>
    <fullName>Q03Section__c</fullName>
    <label>Q03 Section</label>
    <type>TextArea</type>
</CustomField>