force-app/main/default/objects/VO_Survey__c/fields/Q03Shortname__c.field-meta.xml
<CustomField>
    <fullName>Q03Shortname__c</fullName>
    <label>Q03 Shortname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>