force-app/main/default/objects/VO_Survey__c/fields/Q03Title__c.field-meta.xml
<CustomField>
    <fullName>Q03Title__c</fullName>
    <label>Q03 Title</label>
    <type>TextArea</type>
</CustomField>