force-app/main/default/objects/VO_Survey__c/fields/RepairID__c.field-meta.xml
<CustomField>
    <fullName>RepairID__c</fullName>
    <label>Repair ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>