force-app/main/default/objects/VO_Survey__c/fields/RequestID__c.field-meta.xml
<CustomField>
    <fullName>RequestID__c</fullName>
    <label>Request ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>