force-app/main/default/objects/VO_Survey__c/fields/RespondentProfile__c.field-meta.xml
<CustomField>
    <fullName>RespondentProfile__c</fullName>
    <label>Respondent Profile</label>
    <length>10</length>
    <type>Text</type>
</CustomField>