force-app/main/default/objects/VO_Survey__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <description>Root Cause for dissatisfaction</description>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Design/content</fullName>
            </value>
            <value>
                <fullName>Navigation</fullName>
            </value>
            <value>
                <fullName>Product info</fullName>
            </value>
            <value>
                <fullName>Purchase info</fullName>
            </value>
            <value>
                <fullName>Purchasing process</fullName>
            </value>
            <value>
                <fullName>Delivery info</fullName>
            </value>
            <value>
                <fullName>Payment process</fullName>
            </value>
            <value>
                <fullName>Post-purchase info</fullName>
            </value>
            <value>
                <fullName>Delivery options</fullName>
            </value>
            <value>
                <fullName>Payment options</fullName>
            </value>
            <value>
                <fullName>Order follow-up</fullName>
            </value>
            <value>
                <fullName>Timeliness</fullName>
            </value>
            <value>
                <fullName>Product packaging</fullName>
            </value>
            <value>
                <fullName>Delivery person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>