force-app/main/default/objects/VO_Survey__c/fields/RootCause__c.field-meta.xml
<CustomField>
    <fullName>RootCause__c</fullName>
    <label>Root Cause</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>SurveyType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Design/content</fullName>
            </value>
            <value>
                <fullName>Navigation</fullName>
            </value>
            <value>
                <fullName>Product info</fullName>
            </value>
            <value>
                <fullName>Purchase info</fullName>
            </value>
            <value>
                <fullName>Purchasing process</fullName>
            </value>
            <value>
                <fullName>Delivery info</fullName>
            </value>
            <value>
                <fullName>Post-purchase info</fullName>
            </value>
            <value>
                <fullName>Delivery options</fullName>
            </value>
            <value>
                <fullName>Payment options</fullName>
            </value>
            <value>
                <fullName>Order follow-up</fullName>
            </value>
            <value>
                <fullName>Timeliness</fullName>
            </value>
            <value>
                <fullName>Product packaging</fullName>
            </value>
            <value>
                <fullName>Delivery person</fullName>
            </value>
            <value>
                <fullName>Design/ Content</fullName>
            </value>
            <value>
                <fullName>Overall atmosphere</fullName>
            </value>
            <value>
                <fullName>Waiting time</fullName>
            </value>
            <value>
                <fullName>Overall Welcome</fullName>
            </value>
            <value>
                <fullName>Not welcomed</fullName>
            </value>
            <value>
                <fullName>Not helpful</fullName>
            </value>
            <value>
                <fullName>No empathy</fullName>
            </value>
            <value>
                <fullName>Lack of product knowledge</fullName>
            </value>
            <value>
                <fullName>Story telling</fullName>
            </value>
            <value>
                <fullName>Appearance</fullName>
            </value>
            <value>
                <fullName>Store presentation</fullName>
            </value>
            <value>
                <fullName>SA attitude</fullName>
            </value>
            <value>
                <fullName>SA answer to your needs</fullName>
            </value>
            <value>
                <fullName>SA product knowledge</fullName>
            </value>
            <value>
                <fullName>SA craftmanship knowledge</fullName>
            </value>
            <value>
                <fullName>SA services proposal</fullName>
            </value>
            <value>
                <fullName>SA other products proposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>