force-app/main/default/objects/VO_Survey__c/fields/Scoring__c.field-meta.xml
<CustomField>
    <fullName>Scoring__c</fullName>
    <label>Scoring</label>
    <length>100</length>
    <type>Text</type>
</CustomField>