force-app/main/default/objects/VO_Survey__c/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <formula>IF(
!ISBLANK( TEXT ( ClientDreamID__r.PersonContact.Segmentation__c ) ),
TEXT ( ClientDreamID__r.PersonContact.Segmentation__c ),
&quot;New Client&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segmentation</label>
    <type>Text</type>
</CustomField>