force-app/main/default/objects/VO_Survey__c/fields/SegmentationText__c.field-meta.xml
<CustomField>
    <fullName>SegmentationText__c</fullName>
    <description>Denormalized data from Account --&gt; populated with VO_Survey apex class before insert from DreamIDText__c field</description>
    <label>Segmentation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>