force-app/main/default/objects/VO_Survey__c/fields/Solved__c.field-meta.xml
<CustomField>
    <fullName>Solved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solved</label>
    <type>Checkbox</type>
</CustomField>