force-app/main/default/objects/VO_Survey__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Default value equal to New. Changed to closed if new or pending 2 months after answer date. Changed to No action if the channel equals to No action (old voice)</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>live</fullName>
            </value>
            <value>
                <fullName>soft_deleted</fullName>
            </value>
            <value>
                <fullName>deleted</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>No action</fullName>
                <default>true</default>
                <label>No action</label>
            </value>
            <value>
                <fullName>noShow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>