force-app/main/default/objects/VO_Survey__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>populated with VO_Survey apex class before insert from StoreID__c field</description>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys_del</relationshipName>
    <type>Lookup</type>
</CustomField>