force-app/main/default/objects/VO_Survey__c/fields/STOREDELIVERY__c.field-meta.xml
<CustomField>
    <fullName>STOREDELIVERY__c</fullName>
    <label>Store Delivery</label>
    <length>50</length>
    <type>Text</type>
</CustomField>