force-app/main/default/objects/VO_Survey__c/fields/StoreID__c.field-meta.xml
<CustomField>
    <fullName>StoreID__c</fullName>
    <description>Denormalized data from Store --&gt; sent by Clicktools</description>
    <label>Store ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>