force-app/main/default/objects/VO_Survey__c/fields/StoreName__c.field-meta.xml
<CustomField>
    <fullName>StoreName__c</fullName>
    <formula>Store__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Name</label>
    <type>Text</type>
</CustomField>