force-app/main/default/objects/VO_Survey__c/fields/StoreNameText__c.field-meta.xml
<CustomField>
    <fullName>StoreNameText__c</fullName>
    <description>Denormalized data from Store --&gt; populated with VO_Survey apex class before insert from StoreID__c field</description>
    <label>Store Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>