force-app/main/default/objects/VO_Survey__c/fields/SurveyComment__c.field-meta.xml
<CustomField>
    <fullName>SurveyComment__c</fullName>
    <label>Survey Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>