force-app/main/default/objects/VO_Survey__c/fields/SurveyLanguage__c.field-meta.xml
<CustomField>
    <fullName>SurveyLanguage__c</fullName>
    <description>Sent by Clicktools</description>
    <label>Survey Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>