force-app/main/default/objects/VO_Survey__c/fields/SurveyType__c.field-meta.xml
<CustomField>
    <fullName>SurveyType__c</fullName>
    <description>Sent by Clicktools</description>
    <label>Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VOICE Store Local Sales</fullName>
            </value>
            <value>
                <fullName>VOICE Store After Sales</fullName>
            </value>
            <value>
                <fullName>VOICE Web Sales</fullName>
            </value>
            <value>
                <fullName>VOICE Web Click And Collect</fullName>
            </value>
            <value>
                <fullName>VOICE CSC Sales</fullName>
            </value>
            <value>
                <fullName>VOICE CSC Click And Collect</fullName>
            </value>
            <value>
                <fullName>VOICE Endless Offer</fullName>
            </value>
            <value>
                <fullName>VOICE Post Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>