force-app/main/default/objects/VO_Survey__c/fields/TECH_AssignedToFormula__c.field-meta.xml
<CustomField>
    <fullName>TECH_AssignedToFormula__c</fullName>
    <formula>IF( 
OR(AND(ISNUMBER(Q02Answer__c),  VALUE(Q02Answer__c) &lt;= 6),

AND(ISNUMBER(Q23Answer__c),ISNUMBER(Q24Answer__c), ISNUMBER(Q26Answer__c), ISNUMBER(Q27Answer__c), ISNUMBER(Q28Answer__c), ISNUMBER(Q30Answer__c), ISNUMBER(Q34Answer__c),
VALUE( Q23Answer__c + Q24Answer__c+ Q26Answer__c+Q27Answer__c+Q28Answer__c+Q30Answer__c + Q30Answer__c ) / 7 &lt;= 6 ),

AND(ISNUMBER(Q02Answer__c),  VALUE(Q02Answer__c) = 10, 
OR(AND(ISNUMBER(Q23Answer__c),  VALUE(Q23Answer__c) &gt;= 9), Q23Answer__c = &apos;N/A&apos;),
OR(AND(ISNUMBER(Q24Answer__c),  VALUE(Q24Answer__c) &gt;= 9), Q24Answer__c = &apos;N/A&apos;),
OR(AND(ISNUMBER(Q26Answer__c),  VALUE(Q26Answer__c) &gt;= 9), Q26Answer__c = &apos;N/A&apos;),
OR(AND(ISNUMBER(Q27Answer__c),  VALUE(Q27Answer__c) &gt;= 9), Q27Answer__c = &apos;N/A&apos;),
OR(AND(ISNUMBER(Q34Answer__c),  VALUE(Q34Answer__c) &gt;= 9), Q34Answer__c = &apos;N/A&apos;)))
, 
&apos;Store&apos;, 
&apos;CSC&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_AssignedToFormula</label>
    <type>Text</type>
</CustomField>