force-app/main/default/objects/VO_Survey__c/fields/TECH_CAIds__c.field-meta.xml
<CustomField>
    <fullName>TECH_CAIds__c</fullName>
    <label>TECH_CAIds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>