force-app/main/default/objects/VO_Survey__c/fields/Tech_Q19_Q40Answer__c.field-meta.xml
<CustomField>
    <fullName>Tech_Q19_Q40Answer__c</fullName>
    <description>Used in Local Sales scoring calculation: Q19Answer and Q40Answer have been merged on VOICE console</description>
    <formula>&quot;FORMULA NO MORE USED - TO BE DELETED&quot;
/*
IF(NOT(ISBLANK(Q19Answer__c)), Q19Answer__c, IF(NOT(ISBLANK(Q40Answer__c)), Q40Answer__c, &quot;&quot;))
*/</formula>
    <label>Tech Q19 Q40Answer</label>
    <type>Text</type>
</CustomField>