force-app/main/default/objects/VO_Survey__c/fields/Tech_Sales_Delighted_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Tech_Sales_Delighted_Scoring__c</fullName>
    <formula>false
/*
Q02Answer__c = &quot;10&quot;
&amp;&amp;
(
(Q10Answer__c = &quot;09&quot; || Q10Answer__c = &quot;10&quot; || Q10Answer__c = &quot;N/A&quot;)
&amp;&amp;
(Q11Answer__c = &quot;09&quot; || Q11Answer__c = &quot;10&quot; || Q11Answer__c = &quot;N/A&quot;)
&amp;&amp;
(Q14Answer__c = &quot;09&quot; || Q14Answer__c = &quot;10&quot; || Q14Answer__c = &quot;N/A&quot;)
&amp;&amp;
(Q15Answer__c = &quot;09&quot; || Q15Answer__c = &quot;10&quot; || Q15Answer__c = &quot;N/A&quot;)
&amp;&amp;
(Q16Answer__c = &quot;09&quot; || Q16Answer__c = &quot;10&quot; || Q16Answer__c = &quot;N/A&quot;)
&amp;&amp;
(Q17Answer__c = &quot;09&quot; || Q17Answer__c = &quot;10&quot; || Q17Answer__c = &quot;N/A&quot;)
&amp;&amp;
(Q18Answer__c = &quot;09&quot; || Q18Answer__c = &quot;10&quot; || Q18Answer__c = &quot;N/A&quot;)
&amp;&amp; 
(Tech_Q19_Q40Answer__c = &quot;09&quot; || Tech_Q19_Q40Answer__c = &quot;10&quot; || Tech_Q19_Q40Answer__c = &quot;N/A&quot;)
&amp;&amp;
(Q41Answer__c = &quot;09&quot; || Q41Answer__c = &quot;10&quot; || Q41Answer__c = &quot;N/A&quot;)
&amp;&amp;
(Q22Answer__c = &quot;09&quot; || Q22Answer__c = &quot;10&quot; || Q22Answer__c = &quot;N/A&quot;)
&amp;&amp;
(Q23Answer__c = &quot;09&quot; || Q23Answer__c = &quot;10&quot; || Q23Answer__c = &quot;N/A&quot;)
&amp;&amp;
(Q28Answer__c = &quot;09&quot; || Q28Answer__c = &quot;10&quot; || Q28Answer__c = &quot;N/A&quot;)
)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Sales Delighted Scoring</label>
    <type>Checkbox</type>
</CustomField>