force-app/main/default/objects/VO_Survey__c/fields/Tech_Sales_RA_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Tech_Sales_RA_Scoring__c</fullName>
    <description>Indicates whether or not the scoring equals Recovery Act on &quot;Local Sales&quot; surveys</description>
    <formula>false
/*
(
IF(ISNUMBER(Q10Answer__c),VALUE(Q10Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q11Answer__c),VALUE(Q11Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q14Answer__c),VALUE(Q14Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q15Answer__c),VALUE(Q15Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q16Answer__c),VALUE(Q16Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q17Answer__c),VALUE(Q17Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q18Answer__c),VALUE(Q18Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Tech_Q19_Q40Answer__c),VALUE(Tech_Q19_Q40Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q41Answer__c),VALUE(Q41Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q22Answer__c),VALUE(Q22Answer__c) &lt; 7,false)
|| 
IF(ISNUMBER(Q24Answer__c),VALUE(Q24Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q26Answer__c),VALUE(Q26Answer__c) &lt; 7,false)
|| 
IF(ISNUMBER(Q27Answer__c),VALUE(Q27Answer__c) &lt; 7,false)
|| 
IF(ISNUMBER(Q28Answer__c),VALUE(Q28Answer__c) &lt; 7,false) 
) 
&amp;&amp; 
(IF(ISNUMBER(Q02Answer__c),VALUE(Q02Answer__c) &lt; 7,false)
|| 
IF(ISNUMBER(Q03Answer__c),VALUE(Q03Answer__c) &lt; 7,false)
)
*/</formula>
    <label>Tech Sales RA Scoring</label>
    <type>Checkbox</type>
</CustomField>