force-app/main/default/objects/VO_Survey__c/fields/Tech_Sales_Scoring_Formula__c.field-meta.xml
<CustomField>
    <fullName>Tech_Sales_Scoring_Formula__c</fullName>
    <description>Indicates the scoring of a Local Sales survey - populated by a trigger</description>
    <label>Tech Sales Scoring Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>