force-app/main/default/objects/VO_Survey__c/fields/Tech_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Tech_Unique_Key__c</fullName>
    <description>Values sent by ClickTools : to avoid Survey dupplication, concatenation of DreamId + Questionnaire Type</description>
    <label>Unique</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>